[metadata]
name = example-pkg-rschaaf-aifa
version = 0.0.1
author = Reinhold Schaaf
author_email = rschaaf@astro.uni-bonn.de
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rschaaf-aifa/packaging_tutorial
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
